[gd_scene load_steps=5 format=3 uid="uid://cg4t1l5nufk4l"]

[ext_resource type="Script" path="res://game_loop/input_select/input_hint.gd" id="1_07022"]
[ext_resource type="PackedScene" uid="uid://v3duygxcvqa4" path="res://game_loop/main_river/misc.tscn" id="2_biclg"]
[ext_resource type="Theme" uid="uid://c2a7nkhpt7afl" path="res://ui/default_theme.tres" id="3_mq7q6"]
[ext_resource type="FontFile" uid="uid://b7fge08kxi2iv" path="res://ui/fonts/heading_bold.ttf" id="4_32kcx"]

[node name="InputHint" type="Node2D"]
script = ExtResource("1_07022")

[node name="Sprite2D" parent="." instance=ExtResource("2_biclg")]
frame = 5

[node name="InputLeft" type="Node2D" parent="."]
position = Vector2(-130, 0)
rotation = 3.14159

[node name="Label" type="Label" parent="InputLeft"]
offset_left = -96.0
offset_top = -99.0
offset_right = 96.0
offset_bottom = 98.0
theme = ExtResource("3_mq7q6")
theme_override_fonts/font = ExtResource("4_32kcx")
theme_override_font_sizes/font_size = 128
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputRight" type="Node2D" parent="."]
position = Vector2(123, 0)

[node name="Label" type="Label" parent="InputRight"]
offset_left = -96.0
offset_top = -99.0
offset_right = 96.0
offset_bottom = 98.0
theme = ExtResource("3_mq7q6")
theme_override_fonts/font = ExtResource("4_32kcx")
theme_override_font_sizes/font_size = 128
text = ">"
horizontal_alignment = 1
vertical_alignment = 1
